[package]
name = "nectar"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = " Telnet protocol (RFC 854) implementation via a Tokio codec. "
repository = "https://github.com/robertwayne/nectar"
categories = ["network-programming"]
keywords = ["blossom", "mud", "tokio", "telnet", "gmcp"]
readme = "README.md"

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
