[package]
name = "nectar"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Telnet protocol (RFC 854) implementation via a Tokio codec. Includes support for various MUD protocol extensions."
repository = "https://github.com/robertwayne/nectar"
categories = ["network-programming"]
keywords = ["telnet", "gmcp", "mssp", "mccp", "mud"]
readme = "README.md"

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

[lib]
doctest = false

[features]
unicode = []
